[tool.poetry]
name = "pre-commit-hooks"
version = "0.1.0"
description = "Custom hooks to use with pre-commit"
authors = ["Bryan Neyedli <bryan@bledsol.net>"]
license = "MEH"
readme = "README.md"
packages = [{include = "pre_commit_hooks"}]

[tool.poetry.dependencies]
python = "^3.0"
black = "^22.8.0"
flake8 = "^5.0.4"
pylint = "^2.15.3"
bandit = "^1.7.4"
isort = "^5.10.1"
mypy = "^0.971"
pytype = "^2022.9.8"
semgrep = "^0.114.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
